updated demo to add tooltip

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <button id="addDataBtn">Add Random Data Point</button>
+    <div id="tooltip" style="position: absolute; opacity: 0; pointer-events: none; padding: 8px; background: lightsteelblue; border-radius: 4px; color: white;"></div>
     <svg id="myChart" width="600" height="400"></svg>
     <script src="chart.js"></script>
 </body>
